--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -7,6 +7,11 @@
   padding: 2px 13px;
 }
 
+.img {
+  border-radius: 25px;
+  padding: 20px;
+}
+
 .button-3 {
   appearance: none;
   background-color: #2ea44f;
