--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -12,6 +12,30 @@
   padding: 20px;
 }
 
+ul {
+  list-style-type: none;
+  width: 500px;
+}
+
+li img {
+  float: left;
+  margin: 0 15px 0 0;
+}
+
+li p {
+  font: 200 12px/1.5 Georgia, Times New Roman, serif;
+}
+
+li {
+  padding: 10px;
+  overflow: auto;
+}
+
+li:hover {
+  background: #eee;
+  cursor: pointer;
+}
+
 .button-3 {
   appearance: none;
   background-color: #2ea44f;
