--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,5 +1,5 @@
 .App {
-
+background-color: #cde4d3;
 
 }
 
@@ -21,6 +21,8 @@ ul {
 li img {
   float: left;
   margin: 0 15px 0 0;
+  border-radius: 25px;
+  padding: 20px;
 }
 
 li {
@@ -29,7 +31,7 @@ li {
 }
 
 li:hover {
-  background: #eee;
+  background: #96e0ab;
   cursor: pointer;
 }
 
